default/objects/Trigger_Log_Link__c/Trigger_Log_Link__c.object-meta.xml
<CustomObject>
    <description>Relates a specific sObject to a trigger execution log</description>
    <label>Trigger Log Link</label>
    <nameField>
        <displayFormat>TLL-{00000}</displayFormat>
        <label>Trigger Log Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Log Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>