default/objects/Trigger_Log_Link__c/fields/Record_UUID__c.field-meta.xml
<CustomField>
    <fullName>Record_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>An identifier for this record generated by the system that is available in &apos;before insert&apos; context to allow linking of log records to Salesforce records when they do not yet have a Salesforce given id.</description>
    <externalId>true</externalId>
    <inlineHelpText>An identifier for this record generated by the system that is available in &apos;before insert&apos; context to allow linking of log records to Salesforce records when they do not yet have a Salesforce given id.</inlineHelpText>
    <label>Record UUID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>