default/objects/Trigger_Log_Link__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>