default/objects/Trigger_Log_Link__c/fields/Trigger_Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Execution_Log__c</fullName>
    <label>Trigger Execution Log</label>
    <referenceTo>Trigger_Execution_Log__c</referenceTo>
    <relationshipLabel>Trigger Log Links</relationshipLabel>
    <relationshipName>Trigger_Log_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>